--- a/webapp/artushima-web/angular.json
+++ b/webapp/artushima-web/angular.json
@@ -71,7 +71,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "artushima-web:build"
+            "browserTarget": "artushima-web:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
