--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 __pycache__/
 
 # virtual environment
-venv/
+artushima-venv/
 
 # VSCode settings
 .vscode/
@@ -12,9 +12,6 @@ logs/
 
 # .env files
 *.env
-
-# database files
-*.db
 
 # target
 target/
